--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
   "modules": "SOrCC.Graphcs",
   "entry_points": "",
   "priority": "",
-  "repo_urls": "https://github.com/Conscience-Constellator/CC.Graphcs",
+  "repo_urls": "https://github.com/Conscience-Constellator/Graphcs",
   "notes": "No mains"
 }
