--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "project_root": ".",
-  "modules": "SOrCC.Graphcs",
+  "modules": "CC.Graphcs",
   "entry_points": "",
   "priority": "",
   "repo_urls": "https://github.com/Conscience-Constellator/Graphcs",
